kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: sample-service

spec:
  selector:
    app: sample-app

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
